--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,6 @@
 /*Reset css*/
+
+
 * {
     padding: 0;
     margin: 0;
@@ -7,7 +9,45 @@
 
 html {
     font-family: Arial, Helvetica, sans-serif;
+    scroll-behavior: smooth;
     
+}
+
+#main {
+    overflow: hidden;
+}
+
+
+/* Common */
+.row {
+    padding-left: 8px;
+    padding-right: 8px;
+    margin: 0!important;
+}
+.col {
+    float: left;
+    display: inline-block!important;
+}
+
+.col-third {
+    width: 33.3333%;
+}
+
+.col-half {
+    width: 50%;
+}
+
+.col-full {
+    width: 100%;
+}
+
+.plr-8 {
+    padding: 0 8px;
+}
+
+
+.text-center {
+    text-align: center !important;
 }
 
 
@@ -18,6 +58,7 @@ html {
 }
 
 #header {
+    width: 100%;
     height: 46px;
     background-color: #000;
     position: relative;
@@ -27,6 +68,8 @@ html {
     right: 0px;
     z-index: 1;
     font-size: 15px;
+
+
 
 }
 
@@ -52,8 +95,7 @@ html {
     display: block;
     text-decoration: none;
     line-height: 46px;
-    padding-left: 24px;
-    padding-right: 24px;
+    padding: 0 24px;
     
 }
 
@@ -95,6 +137,12 @@ html {
     size: 14px;
 }
 
+
+
+
+
+/* Icon */
+#header .header-mobile-menu,
 #header .header-search {
     float: right;
     padding: 0 24px;
@@ -106,16 +154,39 @@ html {
     
 }
 
+#header .header-mobile-menu .mobile-menu-icon,
 #header .header-search .search-icon {
     color: #fff;
     size: 14px;
     line-height: 46px;
 }
 
+#header .header-mobile-menu {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    box-sizing: border-box;
+}
+
+#header .header-mobile-menu:hover {
+    background-color:#cccccc;
+}
+
+#header .header-mobile-menu:hover .mobile-menu-icon {
+    color: black!important;
+}
+
+
+
+
+
+/* Slider */
+
 #slider {
     margin-top: 46px;
     padding-top: 50%;
-    background-image: url('/HTML/WebTheBand/assets/image/slider/chicago.jpg');
+    background-image: url('../image/slider/chicago.jpg');
     background-position: top center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -128,8 +199,8 @@ html {
     bottom: 0px;
     left: 50%;
     transform: translateX(-50%);
-    text-align: center;
     padding: 32px 16px;
+    text-shadow: 0 0 1px #000;
 }
 
 #slider .text-heading {
@@ -153,6 +224,7 @@ html {
 
 #content .content-section {
     width: 800px;
+    max-width: 100%;
     padding: 64px 16px;
     margin-left: auto;
     margin-right: auto;
@@ -183,14 +255,8 @@ html {
 }
 
 #content .member-list {
-    padding: 32px 0px;
-    width: 768px;
-}
-
-#content .member-item {
-    float: left;
-    width: 33.3333%;
-    text-align: center;
+    padding: 32px 0 0;
+    max-width: 768px;
 }
 
 #content .member-name {
@@ -271,13 +337,10 @@ html {
 }
 
 .tickets-buy-list .tickets-buy {
-    float: left;
     color: #000;
-    width: 33.3333%;
-    height: 388px;
+    max-height: 100%;
     box-sizing: border-box;
     display: block;
-    padding: 8px 8px;
     text-size-adjust: 100%;
 }
 
@@ -316,8 +379,6 @@ html {
     color: #fff;
     font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
-    width: 114px;
-    height: 39px;
     font-weight: 400;
     font-stretch: 100%;
     text-align: center;
@@ -343,19 +404,26 @@ html {
 /*Contact section */
 
 
-#content .contact-section {
 
-}
-
-.contact-section .contact-address {
-    display: inline-block;
+.contact-address {
+    padding: 32px 0;
 }
 
 
 .contact-address-large {
     display: block;
     float: left;
+    font-size: 18px;
 
+}
+
+.contact-address-large a {
+    color: #00e;
+    opacity: 0.8;
+}
+
+.contact-address-large a:hover {
+    opacity: 1;
 }
 
 .contact-address-feedback {
@@ -364,12 +432,40 @@ html {
     
 }
 
+.line-height {
+    line-height: 2!important;
+    font-weight: bold!important;
+}
 
+.contact-feedback {
 
+}
+.form-control {
+    padding: 8px;
+    width: 100%;
+    font-size: 15px;
+    border: 1px solid #ccc!important;
+}
 
+.row-input-name-mess {
+    margin: 0 -8px 8px -8px;
+}
 
+.send-btn {
+    float: right;
+    padding: 8px 16px;
+    margin: 16px 0;
+    background-color: #000;
+    color: #fff;
+    letter-spacing: 1px;
+    border-style: none;
 
+}
 
+.send-btn:hover {
+    background-color: #ccc;
+    color: #000;
+}
 /* Map section */
 
 #content .map-section {
@@ -378,9 +474,31 @@ html {
 
 .map-section .map-img {
     max-width: 100%;
+
+}
 /* End: Map section */
+
+/* footer */
+.footer {
+    padding: 64px 16px;
 }
 
+.footer-icon {
+    font-size: 24px;
+    color:#757575;
+    margin: 0 4px;
+}
+
+.footer-icon:hover {
+    opacity: 0.6;
+}
+
+.footer-medium {
+    font-size: 15px;
+    color: #757575;
+    margin: 16px 0;
+}
+/* footer end */
 
 /*Tickets Container */
 .modal {
@@ -475,6 +593,7 @@ html {
 
 .modal .modal-footer {
     padding: 0 16px;
+    display: block;
 }
 
 .modal .modal-button-close {
@@ -507,10 +626,12 @@ html {
 /*End: tickets Container */
 
 
+
+
+
 #footer {
 
 }
-
 
 
 @keyframes modal-FaceIn {
